added generateFlashcardsInteractively method for interactive mode